# Last-Music-with-electron

./: .eslintrc.yml  .gitignore  .prettierrc.yml  Cargo.toml  README.md  index.node  package-lock.json  package.json  tsconfig.json  webpack.config.js
Documents/: EDD.md  Last-Music ER.dio  RDD.md  music_search_flowchart.md
native/: Cargo.toml
native-tmp/music-manager/src/: lib.rs  tests.rs
native/music-manager/: Cargo.toml
native/music-manager/src/: lib.rs  tests.rs
native/src/: lib.rs
src/: index.html  index.tsx  main.ts  main.tsx  preload.ts  store.ts
src/actions/: SettingsActions.ts  UserActions.ts
src/api/: IAPI.ts  api.ts  apiInterface.ts
src/components/: Button.tsx  LibraryContents.tsx  LibraryList.tsx  LibraryPanel.tsx  LibraryTab.tsx  MediaControl.tsx  MediaControlButton.tsx  MediaControlPlayOption.tsx  MediaControlPrimaryButtonGroup.tsx  MediaControlProgressBar.tsx  MediaControlSeekBar.tsx  MediaControlVolume.tsx  PlayButton.tsx  RepeatButton.tsx  ShuffleButton.tsx  SkipNextButton.tsx  SkipPreviousButton.tsx  StopButton.tsx  TextBox.tsx  UserForm.tsx
src/components/AudioPlayer/: AudioPlayer.tsx  AudioPlayerPlayOption.tsx  AudioPlayerPrimaryButtonGroup.tsx  AudioPlayerSeekBar.tsx  AudioPlayerVolume.tsx  MuteButton.tsx  MuteOffButton.tsx  PauseButton.tsx  RepeatButton.tsx  ShuffleButton.tsx  SkipNextButton.tsx  StopButton.tsx  audioController.ts
src/components/mediaControl/: MediaControl.tsx  MediaControlPlayOption.tsx  MediaControlPrimaryButtonGroup.tsx  MediaControlSeekBar.tsx  MediaControlVolume.tsx  PlayButton.tsx  RepeatButton.tsx  ShuffleButton.tsx  SkipNextButton.tsx  SkipPreviousButton.tsx  StopButton.tsx  musicPlayer.ts
src/reducers/: SettingsReducer.ts  UserReducer.ts
src/slice/: settings.ts  settingsSlice.ts
src/slice/settings/: audioPlayerSettingsSlice.ts  (+1 more)
src/states/: ISettings.ts  IState.ts  IUser.ts  settings.ts  state.ts
src/styles/: style.ts
src/theme/: DarkTheme.tsx  LightTheme.tsx  Theme.tsx
