[package]
authors = ["Romira915 <40430090+Romira915@users.noreply.github.com>"]
edition = "2018"
name = "music-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3.6", features = ["full"]}
thiserror = "1.0.22"