[package]
authors = ["Romira915 <40430090+Romira915@users.noreply.github.com>"]
edition = "2018"
name = "music_manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
rodio = "0.13.0"
thiserror = "1.0.23"
tokio = {version = "1.2.0", features = ["full"]}
